[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Karakter/enemy/spriter_file_body_parts/laser_end.png" type="Texture" id=1]
[ext_resource path="res://Audio/laser enemy.wav" type="AudioStream" id=2]
[ext_resource path="res://Karakter/Boss_Enemy/peluru_boss1.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Destroy",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.95342
height = 0.0

[node name="peluru_boss1" type="RigidBody2D"]
collision_layer = 16
collision_mask = 19
mass = 9.18367
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 5 )

[node name="SpriteBullet" type="AnimatedSprite" parent="."]
scale = Vector2( 0.105932, 0.0738342 )
frames = SubResource( 1 )
animation = "Destroy"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6, 0 )
rotation = -1.53065
shape = SubResource( 2 )

[node name="bullet" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_peluru_boss1_body_entered"]
[connection signal="animation_finished" from="SpriteBullet" to="." method="_on_SpriteBullet_animation_finished"]
